[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "micropython-captive-dhcp-server"
version = "0.0.1.dev"
description = "Micropython asyncio simplistic dhcp server for use with captive portals"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
authors = [
    { name = "Patrick McAndrew", email="patrick@urg.name" }
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/urg/micropython-captive-dhcp-server"
Repository = "https://github.com/urg/micropython-captive-dhcp-server"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["micropython_captive_dhcp_server"]
